deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-production
spec:
  selector:
    matchLabels:
      app: iam
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: iam
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iam:master
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "iam.wsgi:app"]
      - name: postgres
        image: postgres:10-alpine
        ports:
        - containerPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam-staging
spec:
  selector:
    matchLabels:
      app: iam
      env: staging
  replicas: 1
  template:
    metadata:
      labels:
        app: iam
        env: staging
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/iam:devel
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "iam.wsgi:app"]
      - name: postgres
        image: postgres:10-alpine
        ports:
        - containerPort: 5432
